# courseWork

./: .gitignore  README.md  README.md.txt
csc1100/Final Project/: CSC_1100_ Final_Project.sln  CSC_1100_ Final_Project.vcxproj  CSC_1100_ Final_Project.vcxproj.filters
csc1100/Lab_10/: Lab_10.sln  Lab_10.vcxproj
csc1100/Lab_11/: Lab_11.vcxproj.filters
csc1100/Lab_12/: Lab_12.vcxproj
csc1100/Lab_13/: Lab_13.sln
csc1100/Lab_14/: Lab_14.sln  Lab_14.vcxproj
csc1100/Lab_15/: Lab_15.sln  Lab_15.vcxproj
csc1100/Lab_16/: Lab 16.sln  Lab 16.vcxproj
csc1100/Lab_17/: Lab_17.sln  Lab_17.vcxproj
csc1100/Lab_18/: Lab_18.sln  Lab_18.vcxproj
csc1100/Lab_5/: Lab_5.vcxproj
csc1100/Lab_6/: Lab_6.sln  Lab_6.vcxproj.filters
csc1100/Lab_7/: Lab_7.vcxproj.filters
csc1100/Lab_8/: Lab_8.sln  (+2 more)
csc2110/: Lab 1.cpp  Lab 11.cpp  Lab 13.cpp  Lab 15.cpp  Lab 16.cpp  Lab 17.cpp  Lab 18.cpp  Lab 20.cpp  Lab 21.cpp  Lab 22.cpp  Lab 23.cpp  Lab 6.cpp  Lab 7.cpp
csc3100/: Lab 10.docx  Lab 3 problem 1.logicly  Lab 6.docx  Lab 7.X68  Lab 7.docx  Lab 8 problem 1.X68  Lab 8.docx  Lab 9.docx  Lab10.X68  Lab6-q1.X68  Lab6-q2.X68  Lab7-revised.X68  Lab8-2.X68  Lab8.X68  Lab9.X68  Logic Circuit for lab 4.logicly  Quiz_2 - Question3.X68  Quiz_2-Question1.X68  Quiz_2-Question2.X68  Register test.X68  test for 3.X68  test for 4.X68
csc4110/Lab 4/QtHelloWorldQt5/: CMakeLists.txt  qtprogramwin.cpp  qtprogramwin.h  qtprogramwin.ui
csc4420/: CSC4420.cpp  a.out  task1.sh  task8.cpp
csc4500-PDA assignment/: CSC4500 Extra Credit Assignment Results.txt  PDAproblem.doc  input.txt  main.cpp
(+1771 files in other folders)
